version 1.1+
	* Use HIGHEST_PROTOCOL when pickle()ing

version 1.1 Tue Mar 03 2015 by luispedro
	* Python 3 compatibility fixes
	* fsync(directory) in file backend
	* Jug hooks (still mostly undocumented, but already enabling internal code
	simplification)

version 1.0 Tue May 20 2014 by luispedro
	* Renamed release candidate to final

version 1.0rc0 Mon Apr 21 2014 by luispedro
	* Adapt status output to terminal width (by Alex Ford)
	* Add a newline at the end of lockfiles for file backend
	* Add --cache-file option to specify file for ``status --cache``

version 0.9.7 Tue Feb 18 2014 by luispedro
	* Fix use of numpy subclasses
	* Fix redis URL parsing
	* Fix ``shell`` for newer versions of IPython
	* Correctly fall back on non-sqlite ``status``
	* Allow user to call set_jugdir() inside jugfile

version 0.9.6 Tue Aug 6 2013 by luispedro
	* Faster decoding
	* Add jug-execute script
	* Add describe() function
	* Add write_task_out() function
	* Allow for set_jugdir() to be called inside jugfile

version 0.9.5 Mon May 27 2013 by luispedro
	* Added debug mode
	* Even better map.reduce.map using blocked access
	* Python 3 support
	* Make sqlite3 a soft dependency for ``status --cache``
	* Load config when embedding ipython
	* Documentation improvements

version 0.9.4 Mon Apr 15 2013 by luispedro
	* Add CustomHash wrapper to set __jug_hash__
	* Print traceback on import error
	* Exit when no progress is made even with barrier
	* Use Tasklets for better jug.mapreduce.map
	* Use Ipython debugger if available (patch by Alex Ford)
	* Faster --aggressive-unload
	* Add currymap() function

version 0.9.3 Sun Dec 2 2012 by luispedro
	* Fix parsing of ports on redis URL (patch by Alcides Viamontes)
	* Make hashing robust to different orders when using randomized hashing
	(patch by Alcides Viamontes)
	* Allow regex in invalidate command (patch by Alcides Viamontes)
	* Add --cache --clear suboption to status
	* Allow builtin functions for tasks